# sdf-ray4d-engine

./: .editorconfig  .env.build.example  .env.config.example  .env.example  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  qt_vulkan_source_build.sh  spirv_compile.sh  spirv_partials_compile.sh  spirv_static_compile.sh  vcpkg.json.bkp
assets/shaders/: depth_pass.vert
assets/shaders/Actor/: color_phong.frag  color_phong.vert  rasterized_mesh_pass.frag
assets/shaders/Depth/: depth_pass.vert
assets/shaders/Raymarch/_partials/: distance_functions.partial.glsl  operations.partial.glsl
assets/shaders/Raymarch/dynamic/: rtprimitives.frag  sdfr_pass.frag  shader.begin.frag  shader.end.frag
assets/shaders/Raymarch/static/: blank.frag  fullscreentri.vert  sdfr_pass.vert
assets/shaders/SDF/: rtprimitives.frag  shader.begin.frag  shader.end.frag
assets/shaders/SDF/static/: fullscreentri.vert  rtprimitives.frag  screenQuad.vert
assets/shaders/triangle/: color.frag  color.vert
cmake/: doxygen.cmake  env_var_parser.cmake  qt_source_build.cmake  sanitizers.cmake  static_assets_pipeline.cmake
docs/design/: high-level-architecture.drawio
include/: Buffer.hpp  Camera.hpp  GLSLCompiler.hpp  MainWindow.hpp  Material.hpp  Mesh.hpp  PSO.hpp  Pipeline.hpp  RenderPass.hpp  Renderer.hpp  SDFGraph.hpp  SPIRVCompiler.hpp  Shader.hpp  ShaderManager.hpp  Texture.hpp  Types.hpp  _constants.hpp  pch.hpp
include/Helpers/: BaseHelper.hpp  Buffer.hpp  Command.hpp  Descriptor.hpp  Framebuffer.hpp  Pipeline.hpp  RenderPass.hpp
include/SDFGraph/: CollapsedNodeDataModel.hpp  DistanceFieldData.hpp  DistanceFieldOutputDataModel.hpp  MapData.hpp  MathsDataModels.hpp  OperationData.hpp  SDFGraphDataModel.hpp  ShapeData.hpp  Util.hpp
include/SDFGraph/DataModels/: BaseDataModel.hpp  MapDataModel.hpp  MaterialDataModel.hpp  OperationDataModel.hpp  ShapeDataModel.hpp
include/SDFGraph/DataModels/Operations/: IntersectionDataModel.hpp  SubtractionDataModel.hpp  UnionDataModel.hpp
include/SDFGraph/DataModels/Shapes/: CubeDataModel.hpp  SphereDataModel.hpp  TorusDataModel.hpp
include/SDFGraph/Interfaces/: IData.hpp  IDataModel.hpp  IOperationDataModel.hpp
include/SDFGraph/Primitives/: CubePrimitiveDataModel.hpp  SphereDataModel.hpp
include/VKHelpers/: BaseHelper.hpp  Buffer.hpp  Command.hpp  Descriptor.hpp  Framebuffer.hpp  PSO.hpp  Pipeline.hpp  RenderPass.hpp
include/Window/: MainWindow.hpp  VulkanWindow.hpp
src/: Camera.cpp  GLSLCompiler.cpp  MainWindow.cpp  Material.cpp  Mesh.cpp  Pipeline.cpp  RenderPass.cpp  Renderer.cpp  SDFGraph.cpp  SPIRVCompiler.cpp  Shader.cpp  ShaderManager.cpp  Texture.cpp  VulkanWindow.cpp  main.cpp  shader.cpp
src/Helpers/: Buffer.cpp  Command.cpp  Descriptor.cpp  Framebuffer.cpp  Pipeline.cpp  RenderPass.cpp
src/Helpers/Buffer/: create_buffer_helpers.cpp  memory_helpers.cpp
src/Helpers/Command/: bindings.cpp  draw_calls.cpp
src/Helpers/Descriptor/: create_set_helpers.cpp  write_set_helpers.cpp
src/Helpers/Pipeline/: create_descriptor_set_helpers.cpp  create_pipeline_helpers.cpp  create_pipeline_workers.cpp  destroy_helpers.cpp  init_pso_helpers.cpp
src/Helpers/RenderPass/: framebuffer_helpers.cpp
src/MainWindow/events/: graph_listeners.cpp  input_listeners.cpp
src/MainWindow/initializers/: sdf_graph.cpp  vk_window.cpp  widgets.cpp
src/Pipeline/: create_descriptor_set_helpers.cpp  create_pipeline_helpers.cpp  create_pipeline_workers.cpp  destroy_helpers.cpp  framebuffer_helpers.cpp  init_pso_helpers.cpp
src/Renderer/: frame.cpp  resources.cpp  swapchain_resources.cpp  user_input_helpers.cpp
src/Renderer/frame/: buffers.cpp  command_exec_helpers.cpp  create_buffers_helpers.cpp  draw_calls.cpp  render_pass.cpp  upload_buffers.cpp  user_input_helpers.cpp
src/Renderer/resources/: create_pipeline_helpers.cpp  destroy_helpers.cpp  init_helpers.cpp  init_materials_helpers.cpp  init_pso_helpers.cpp  init_shaders_helpers.cpp  sdf_graph_pipeline_helpers.cpp  swapchain_helpers.cpp
src/SDFGraph/: CollapsedNodeDataModel.cpp  DistanceFieldOutputDataModel.cpp  ExpressionEvaluator.cpp  MathsDataModels.cpp
src/SDFGraph/DataModels/: BaseDataModel.cpp  MapDataModel.cpp  OperationDataModel.cpp  ShapeDataModel.cpp
src/SDFGraph/DataModels/Operations/: SubtractionDataModel.cpp  UnionDataModel.cpp
src/SDFGraph/DataModels/Shapes/: CubeDataModel.cpp  SphereDataModel.cpp  TorusDataModel.cpp
src/SDFGraph/Primitives/: CubePrimitiveDataModel.cpp
src/SPIRVCompiler/: compile_helpers.cpp
src/Shader/: load_helpers.cpp  load_overloads.cpp  serializers.cpp
src/VKHelpers/: Buffer.cpp  Command.cpp  Descriptor.cpp  Framebuffer.cpp  Pipeline.cpp  RenderPass.cpp
src/VKHelpers/Buffer/: create_buffer_helpers.cpp  memory_helpers.cpp
src/VKHelpers/Command/: bindings.cpp  draw_calls.cpp
src/VKHelpers/Descriptor/: create_set_helpers.cpp  write_set_helpers.cpp
src/VKHelpers/Pipeline/: create_pipeline_helpers.cpp  create_pipeline_workers.cpp  destroy_helpers.cpp  init_pso_helpers.cpp
src/VKHelpers/RenderPass/: framebuffer_helpers.cpp
src/Window/event_handlers/: event_helpers.cpp  input_events.cpp
src/Window/initializers/: sdf_graph_init_helpers.cpp  vk_window_inits.cpp  widget_inits.cpp
tests/: CMakeLists.txt
tests/include/: TestConfig.hpp
tests/src/: main.cpp
tests/src/config/: TestConfig.cpp
unity_plugin/: CMakeLists.txt
unity_plugin/include/: ray4d_plugin.hpp
